--- a/sites/docs.mockybalboa.com/docs/server/next-js.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/next-js.mdx
@@ -9,6 +9,12 @@ import TabItem from '@theme/TabItem';
 
 How to use Mocky Balboa with Playwright.
 
+:::info[Supported versions]
+
+__14.x.x__ __15.x.x__
+
+:::
+
 ## Installation
 
 <Tabs groupId="package-manager">
