feat: added integration for cypress

--- a/sites/docs.mockybalboa.com/docs/advanced.mdx
+++ b/sites/docs.mockybalboa.com/docs/advanced.mdx
@@ -12,7 +12,10 @@ If you are interested in contributing to Mocky Balboa, or just want to learn mor
 
 Below is a sequence flow diagram that illustrates the flow of a test in a browser automation framework interacting with your application server. The diagram shows what happens when the application server makes an outbound HTTP request to an external API and how the response is processed by the Mocky Balboa server and client.
 
+<figure>
 ![Mocky Balboa sequence diagram](./images/mocky-balboa-sequence.png)
+<figcaption>_[Diagram source](./images/mocky-balboa-sequence.txt) made with [https://sequencediagram.org/](https://sequencediagram.org/)_</figcaption>
+</figure>
 
 There's a lot going on here, but don't worry, we'll break it down step by step.
 
