--- a/sites/docs.mockybalboa.com/docs/server/next-js.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/next-js.mdx
@@ -217,7 +217,7 @@ The easiest way to opt out of fetch request caching is to use the custom `CacheH
 
 :::tip
 
-This section of documentation is only applicable to pages in the app router that opt-in to full dynamic caching.
+This section of documentation is only applicable to pages in the app router that opt-in to full dynamic caching and you want to run your tests in parallel against the same server instance.
 
 :::
 
