--- a/sites/docs.mockybalboa.com/docs/client/playwright.mdx
+++ b/sites/docs.mockybalboa.com/docs/client/playwright.mdx
@@ -7,7 +7,7 @@ import TabItem from '@theme/TabItem';
 
 # Mocky Balboa and Playwright
 
-How to use Mocky Balboa with Playwright.
+How to use Mocky Balboa with [Playwright](https://playwright.dev/).
 
 :::info[Supported versions]
 
