--- a/sites/docs.mockybalboa.com/docs/server/next-js.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/next-js.mdx
@@ -7,7 +7,7 @@ import TabItem from '@theme/TabItem';
 
 # Mocky Balboa and Next.js
 
-How to use Mocky Balboa with Playwright.
+How to use Mocky Balboa with [Next.js](https://nextjs.org).
 
 :::info[Supported versions]
 
