feat: examples complete for nuxt

--- a/sites/docs.mockybalboa.com/docs/server/nuxt.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/nuxt.mdx
@@ -64,4 +64,6 @@ Everything needed to setup the integration is included in the `@mocky-balboa/nux
 
 Make sure `enabled` is set to `false` for your production like environments. You only want to enable the module when running your tests.
 
+Now run your Nuxt application as you normally would, either via build and server or dev.
+
 [Module options API reference](https://api-reference.mockybalboa.com/interfaces/_mocky-balboa_nuxt..MockyBalboaModuleOptions)
